@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2023-07-08T08:20:24Z",
+  "count" : 2,
+  "count_minmax" : [ 2, 2 ],
+  "count_decinc" : [ -0, +2 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
+}
