@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-07-08T01:46:18Z",
+  "timestamp" : "2023-07-08T08:20:24Z",
   "count_outdated" : 637,
   "uniques_outdated" : 361,
-  "count" : 692,
-  "uniques" : 391,
+  "count" : 694,
+  "uniques" : 393,
   "clones" : [
     {
       "timestamp": "2023-06-24T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -103,6 +103,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-08T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
