@@ -1,10 +1,10 @@
 {
-  "count": 55,
-  "uniques": 19,
+  "count": 56,
+  "uniques": 20,
   "clones": [
     {
       "timestamp": "2023-06-24T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -56,6 +56,11 @@
       "timestamp": "2023-07-06T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-08T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
